<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="24dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/description_news_image"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/default_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_news"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    style="@style/title_item"/>

                <TextView
                    android:id="@+id/date_published"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/date_news"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    style="@style/sub_text_item" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/button_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@string/button_open" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>